# nhs-emergency-data

./: .gitignore  01-data-cleaning.ipynb  02-eda.ipynb  LICENSE  README.md  pyproject.toml
.ipynb_checkpoints/: 01-data-cleaning-checkpoint.ipynb
data/raw/: Monthly-AE-Time-Series-June-2025-1-1.xls
src/: Untitled.ipynb  fetch_data.py  load_clean.py
