[project]
name = "nhs-emergency-data"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "matplotlib>=3.9",
  "seaborn>=0.13",
  "plotly>=5.22",
  "statsmodels>=0.14",
  "scikit-learn>=1.4",
  "pyarrow>=16.0",
  "requests>=2.32",
  "jupyter>=1.0",
  "streamlit>=1.36"
]

[tool.ruff]
line-length = 100
